--- a/spine-libgdx/.classpath
+++ b/spine-libgdx/.classpath
@@ -2,7 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/gdx-backend-lwjgl"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry exported="true" kind="lib" path="/gdxtest02-desktop/libs/gdx-backend-lwjgl.jar" sourcepath="/gdxtest02-desktop/libs/gdx-backend-lwjgl-sources.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/gdxtest02-desktop"/>
+	<classpathentry exported="true" kind="lib" path="libs/gdx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
