--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'GdxTest02'
-        gdxVersion = '1.1.0'
+        gdxVersion = "1.3.1-SNAPSHOT"
         roboVMVersion = '0.0.13'
     }
 
